real map functionality in index.html

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
   <div class="container-fluid full-height">
     <div class="row full-height">
       <div class="col-xs-12 col-sm-7 full-height">
-        <div class="full-height" id="map"></div>
+        <div class="full-height" id="mapContainer"></div>
       </div>
       <div class="col-xs-12 col-sm-5 panel-right full-height">
         <form role="form">
@@ -43,8 +43,14 @@
       </div>
     </div>
   </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <script src="http://js.api.here.com/se/2.5.4/jsl.js" type="text/javascript" charset="utf-8"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/map/mappoc.js" type="text/javascript"></script>
+  <script src="js/map/maputility.js" type="text/javascript"></script>
+  <script src="js/map/mapbasics.js" type="text/javascript"></script>
+  <script src="js/map/markers.js" type="text/javascript"></script>
+  <script src="js/map/area.js" type="text/javascript"></script>
+  <script src="js/map/location.js" type="text/javascript"></script>
   </body>
 </html>
