--- a/views/index.html
+++ b/views/index.html
@@ -7,9 +7,10 @@
     <title>Solar Calc</title>
 
     <!-- Bootstrap -->
-    <link href="css/vendor/bootstrap.min.css" rel="stylesheet">
-    <link href="css/vendor/font-awesome.min.css" rel="stylesheet">
-    <link href="css/vendor/theme.css" rel="stylesheet">
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendor/css/theme.css" rel="stylesheet">
+    <link href="vendor/css/wtf-forms.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
