--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,1 @@
-html,body{height:100%;overflow-y:hidden;background:#fff}.container-fluid{padding-left:0}#map{width:100%;background:url('../img/dummy-map.jpg')}.full-height{height:100%}.panel-right{padding-top:30px;overflow-y:auto;background:#fff}.btn-blue{background:#0074d9;color:#fff}
+html,body{height:100%;overflow-y:hidden;background:#fff}.container-fluid{padding-left:0}.full-height{height:100%}.panel-right{padding-top:30px;overflow-y:auto;background:#fff}.btn-blue{background:#0074d9;color:#fff}
