--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body ng-app="solarcap-app">
 
   <div class="container-fluid full-height">
     <div class="row full-height">
@@ -26,7 +26,7 @@
         <div class="full-height" id="mapContainer"></div>
       </div>
       <div class="col-xs-12 col-sm-5 panel-right full-height">
-        <form role="form">
+        <form role="form" ng-controller="SearchCtrl">
 
           <div class="row">
             <div class="col-xs-12 col-sm-8">
@@ -46,7 +46,9 @@
   </div>
   <script src="http://js.api.here.com/se/2.5.4/jsl.js" type="text/javascript" charset="utf-8"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="vendor/js/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+  <script src="js/app/app.js" type="text/javascript"></script>
   <script src="js/map/mappoc.js" type="text/javascript"></script>
   <script src="js/map/maputility.js" type="text/javascript"></script>
   <script src="js/map/mapbasics.js" type="text/javascript"></script>
