--- a/views/index.html
+++ b/views/index.html
@@ -55,5 +55,6 @@
   <script src="js/map/markers.js" type="text/javascript"></script>
   <script src="js/map/area.js" type="text/javascript"></script>
   <script src="js/map/location.js" type="text/javascript"></script>
+  <script src="js/map/search.js" type="text/javascript"></script>
   </body>
 </html>
