--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -4,7 +4,7 @@ html,
 body {
   height: 100%;
   overflow-y: hidden;
-  background: @background;
+  background: #fff;
 }
 
 /* bootstrap fixes */
@@ -23,8 +23,44 @@ body {
 }
 
 .btn-blue {
-  background: @blue;
+  background: @lightBlue;
   color: #fff;
+}
+
+.search-box {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  height: 150px;
+  width: 50%;
+  padding: 20px 30px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 0 rgba(0,0,0,.1);
+     -moz-box-shadow: 3px 3px 0 rgba(0,0,0,.1);
+          box-shadow: 3px 3px 0 rgba(0,0,0,.1);
+
+  .logo {
+    position: absolute;
+    top: 40px;
+    right: -30px;
+    z-index: 99;
+    padding: 10px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      background: #f5f5f5;
+    }
+
+    img {
+      height: 50px;
+      width: 50px;
+      padding: 5px;
+      background: @lightBlue;
+      border-radius: 50%;
+    }
+  }
 }
 
 
