--- a/views/index.html
+++ b/views/index.html
@@ -24,23 +24,30 @@
     <div class="row full-height">
       <div class="col-xs-12 col-sm-7 full-height">
         <div class="full-height" id="mapContainer"></div>
-      </div>
-      <div class="col-xs-12 col-sm-5 panel-right full-height">
-        <form role="form" ng-controller="SearchCtrl">
+        <div class="search-box">
+          <form role="form" ng-controller="SearchCtrl">
 
-          <div class="row">
-            <div class="col-xs-12 col-sm-8">
-              <label for="address">Address:</label>
-              <div class="input-group">
-                <input type="text" class="form-control">
-                <span class="input-group-btn">
-                  <button class="btn btn-info btn-blue" type="button" name="address" id="address" ng-model="address">&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;</button>
-                </span>
+            <div class="row">
+              <div class="col-xs-10">
+                <label for="address">Address:</label>
+                <div class="input-group">
+                  <input type="text" class="form-control">
+                  <span class="input-group-btn">
+                    <button class="btn btn-info btn-blue" type="button" name="address" id="address" ng-model="address">&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;</button>
+                  </span>
+                </div>
               </div>
             </div>
-          </div>
 
-        </form>
+            <div class="logo">
+              <img src="img/logo.png">
+            </div>
+
+          </form>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-5 panel-right full-height">
+
       </div>
     </div>
   </div>
