added slide animation to search box

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -39,6 +39,10 @@ body {
      -moz-box-shadow: 3px 3px 0 rgba(0,0,0,.1);
           box-shadow: 3px 3px 0 rgba(0,0,0,.1);
 
+  &.in {
+    left: -50%;
+  }
+
   .logo {
     position: absolute;
     top: 40px;
