--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
     <div class="row full-height">
       <div class="col-xs-12 col-sm-7 full-height">
         <div class="full-height" id="mapContainer"></div>
-        <div class="search-box">
+        <div class="search-box in">
           <form role="form" ng-controller="SearchCtrl">
 
             <div class="row">
