--- a/views/index.html
+++ b/views/index.html
@@ -58,5 +58,6 @@
   <script src="js/map/area.js" type="text/javascript"></script>
   <script src="js/map/location.js" type="text/javascript"></script>
   <script src="js/map/search.js" type="text/javascript"></script>
+  <script src="js/map/textmarker.js" type="text/javascript"></script>
   </body>
 </html>
