--- a/public/css/less/var.less
+++ b/public/css/less/var.less
@@ -1,3 +1,4 @@
-@background : #fff;
-@blue       : #0074d9;
-@lightBlue  : #2dcff1;
+@background   : #fff;
+@blue         : #0074d9;
+@lightBlue    : #2dcff1;
+@borderRadius : 2px;
