--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
   <div class="container-fluid full-height">
     <div class="row full-height">
       <div class="col-xs-12 col-sm-7 full-height">
-        <div class="full-height" id="mapContainer"></div>
+        <div class="full-height" id="mapContainer" ng-controller="MapCtrl"></div>
       </div>
       <div class="col-xs-12 col-sm-5 panel-right full-height">
         <form class="row-padding" role="form" ng-controller="SearchCtrl">
