added residents picker

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -38,6 +38,20 @@ body {
   }
 }
 
+.rating-list {
+  .rating-item {
+    cursor: pointer;
+
+    &.active {
+      color: @lightBlue;
+    }
+
+    &:hover {
+      color: @lightBlue;
+    }
+  }
+}
+
 .btn-white {
   padding: 5px;
   margin-bottom: 3px;
