marrying calculcations with output

--- a/views/index.html
+++ b/views/index.html
@@ -69,8 +69,14 @@
         </form>
         <div class="row">
             <div class="col-xs-8">
-                <label>Subsidy</label>
-                <span>{{subsidy}}</span>
+                <p>
+                    <label>Yearly Subsidy</label>
+                    <span>{{subsidy}} EUR</span>
+                </p>
+                <p>
+                    <label>Acquisition Cost</label>
+                    <span>{{acquisitionCosts}} EUR</span>
+                </p>
             </div>
         </div>
       </div>
