--- a/views/index.html
+++ b/views/index.html
@@ -71,11 +71,14 @@
             <div class="col-xs-8">
                 <p>
                     <label>Yearly Subsidy</label>
-                    <span>{{subsidy}} EUR</span>
+                    <span>{{ subsidy | currency : ""}} EUR</span>
                 </p>
                 <p>
                     <label>Acquisition Cost</label>
-                    <span>{{acquisitionCosts}} EUR</span>
+                    <span>{{ acquisitionCosts | currency: ""}} EUR</span>
+                </p><p>
+                    <label>Amortization in years</label>
+                    <span>{{amortizationInYears}}</span>
                 </p>
             </div>
         </div>
