--- a/views/index.html
+++ b/views/index.html
@@ -44,10 +44,10 @@
               <label>Type:</label>
               <div class="btn-group btn-group-justified type-picker">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-white" ng-model="parameter.type" radio="house"><i class="fa fa-home fa-2x"></i><br>House</button>
+                  <button type="button" class="btn btn-white" ng-model="parameter.type" radio="HOME"><i class="fa fa-home fa-2x"></i><br>House</button>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-white" ng-model="parameter.type" radio="field"><i class="fa fa-th-large fa-2x"></i><br>Field</button>
+                  <button type="button" class="btn btn-white" ng-model="parameter.type" radio="FIELD"><i class="fa fa-th-large fa-2x"></i><br>Field</button>
                 </div>
               </div>
             </div>
@@ -91,7 +91,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
   <script src="js/app/app.js" type="text/javascript"></script>
   <script src="js/map/mappoc.js" type="text/javascript"></script>
-  <script src="js/solarCalculations/CONSTANTS.js" type="text/javascript"></script>
   <script src="js/solarCalculations/sunCalculator.js" type="text/javascript"></script>
   <script src="js/map/maputility.js" type="text/javascript"></script>
   <script src="js/map/mapbasics.js" type="text/javascript"></script>
