search on button click

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" ng-model="address">
                   <span class="input-group-btn">
-                    <button class="btn btn-info btn-blue" type="button" name="address" id="address">&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;</button>
+                    <button class="btn btn-info btn-blue" type="button" name="address" id="address" ng-click="doSearch()">&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;</button>
                   </span>
               </div>
             </div>
