--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,10 @@
 
   <div class="container-fluid full-height">
     <div class="row full-height">
-      <div class="col-xs-12 col-sm-7 full-height">
+      <div class="col-xs-12 col-sm-6 full-height">
         <div class="full-height" id="mapContainer" ng-controller="MapCtrl"></div>
       </div>
-      <div class="col-xs-12 col-sm-5 panel-right full-height">
+      <div class="col-xs-12 col-sm-6 panel-right full-height">
         <form class="row-padding" role="form" ng-controller="SearchCtrl">
 
           <div class="row">
@@ -64,8 +64,12 @@
               </div>
             </div>
           </div>
-
-
+          <div class="row">
+            <div class="col-xs-12">
+              <!--<div class="chart" ac-chart="chart.type" ac-data="chart.data" ac-config="chart.config" id="chart"></div>-->
+              <div class="chart" google-chart chart="chartObject" style="{{cssStyle}}"></div>
+            </div>
+          </div>
         </form>
 
       </div>
@@ -73,8 +77,14 @@
   </div>
   <script src="http://js.api.here.com/se/2.5.4/jsl.js" type="text/javascript" charset="utf-8"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="vendor/js/bootstrap.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+  <script src="vendor/js/bootstrap.min.js"></script>
+  <script src="vendor/js/ng-google-chart.js"></script>
+  <!--
+  <script src="vendor/js/d3.min.js"></script>
+  <script src="vendor/js/angular-charts.min.js"></script>
+  -->
+
   <script src="js/app/app.js" type="text/javascript"></script>
   <script src="js/map/mappoc.js" type="text/javascript"></script>
   <script src="js/solarCalculations/CONSTANTS.js" type="text/javascript"></script>
