--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -87,6 +87,17 @@ body {
   width: 100%;
 }
 
-
-
-
+.result-item {
+  padding: 5px;
+  margin-bottom: 3px;
+  background-color: #fff;
+  border: 1px solid #d9d9d9;
+  -webkit-border-radius: @borderRadius;
+  border-radius: @borderRadius;
+  cursor: pointer;
+  box-shadow: 0 1px 0 rgba(0,0,0,.05);
+  -webkit-transition: background-color .22s,border-color .22s,box-shadow .22s;
+  transition: background-color .22s,border-color .22s,box-shadow .22s;
+  outline: none;
+  text-align: center;
+}
