--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,10 @@
 
   <div class="container-fluid full-height">
     <div class="row full-height" ng-controller="CalcCtrl">
-      <div class="col-xs-12 col-sm-7 full-height">
+      <div class="col-xs-12 col-sm-6 full-height">
         <div class="full-height" id="mapContainer" ng-controller="MapCtrl"></div>
       </div>
-      <div class="col-xs-12 col-sm-5 panel-right full-height">
+      <div class="col-xs-12 col-sm-6 panel-right full-height">
         <form class="row-padding" role="form" ng-controller="SearchCtrl" ng-submit="doSearch()">
           <div class="row">
             <div class="col-xs-8">
@@ -64,27 +64,32 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-xs-4">
+              <div class="result-item">
+                <strong>Yearly Subsidy</strong><br>
+                {{ subsidy | currency : ""}} EUR
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="result-item">
+                <strong>Acquisition Cost</strong><br>
+                {{ acquisitionCosts | currency: ""}} EUR
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="result-item">
+                <strong>Amortization in years</strong><br>
+                {{amortizationInYears}}
+              </div>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-xs-12">
               <!--<div class="chart" ac-chart="chart.type" ac-data="chart.data" ac-config="chart.config" id="chart"></div>-->
               <div class="chart" google-chart chart="chartObject" style="{{cssStyle}}"></div>
             </div>
           </div>
         </form>
-        <div class="row">
-            <div class="col-xs-8">
-                <p>
-                    <label>Yearly Subsidy</label>
-                    <span>{{ subsidy | currency : ""}} EUR</span>
-                </p>
-                <p>
-                    <label>Acquisition Cost</label>
-                    <span>{{ acquisitionCosts | currency: ""}} EUR</span>
-                </p><p>
-                    <label>Amortization in years</label>
-                    <span>{{amortizationInYears}}</span>
-                </p>
-            </div>
-        </div>
       </div>
     </div>
   </div>
