--- a/views/index.html
+++ b/views/index.html
@@ -31,10 +31,15 @@
             <div class="col-xs-8">
               <!--<label for="address">Address:</label>-->
               <div class="input-group">
-                <input type="text" class="form-control" ng-model="address" placeholder="Where do you live mate?">
+                <input type="text" class="form-control" ng-change="doRecommend()" ng-model="address" placeholder="Where do you live mate?">
                 <span class="input-group-btn">
                   <button class="btn btn-info btn-blue" type="button" name="address" id="address" ng-click="doSearch()">&nbsp;&nbsp;&nbsp;<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;</button>
                 </span>
+              </div>
+              <div>
+                  <div ng-repeat="recommendation in recommendations">
+                      <a ng-click='setAddress("{{recommendation}}")'>{{recommendation}}</a>
+                  </div>
               </div>
             </div>
           </div>
@@ -93,7 +98,7 @@
       </div>
     </div>
   </div>
-  <script src="http://js.api.here.com/se/2.5.4/jsl.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://js.cit.api.here.com/se/2.5.4/jsl.js?with=maps,positioning,places,placesdata" type="text/javascript" charset="utf-8"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
   <script src="vendor/js/bootstrap.min.js"></script>
