--- a/views/index.html
+++ b/views/index.html
@@ -72,22 +72,28 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-3">
               <div class="result-item">
                 <strong>Yearly Subsidy</strong><br>
                 {{ subsidy | currency : ""}} EUR
               </div>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-3">
               <div class="result-item">
                 <strong>Acquisition Cost</strong><br>
                 {{ acquisitionCosts | currency: ""}} EUR
               </div>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-3">
               <div class="result-item">
                 <strong>Amortization in years</strong><br>
                 {{amortizationInYears}}
+              </div>
+            </div>
+            <div class="col-xs-3" ng-if="inputData.withBattery">
+              <div class="result-item">
+                <strong>Saving from Battery</strong><br>
+                {{savingFromBattery}}
               </div>
             </div>
           </div>
