--- a/views/index.html
+++ b/views/index.html
@@ -48,10 +48,10 @@
               <label>Type:</label>
               <div class="btn-group btn-group-justified type-picker">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-white" ng-model="inputData.type" radio="HOME"><i class="fa fa-home fa-2x"></i><br>House</button>
+                  <button type="button" class="btn btn-white" ng-model="inputData.kind" radio="HOME"><i class="fa fa-home fa-2x"></i><br>House</button>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-white" ng-model="inputData.type" radio="FIELD"><i class="fa fa-th-large fa-2x"></i><br>Field</button>
+                  <button type="button" class="btn btn-white" ng-model="inputData.kind" radio="FIELD"><i class="fa fa-th-large fa-2x"></i><br>Field</button>
                 </div>
               </div>
             </div>
