added two more result items

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -78,7 +78,7 @@ body {
 
 .row-padding {
   .row {
-    padding-bottom: 15px;
+    padding-bottom: 20px;
   }
 }
 
@@ -99,15 +99,19 @@ body {
   transition: background-color .22s,border-color .22s,box-shadow .22s;
   outline: none;
   text-align: center;
+
+  .green {
+    color: #8CC152;
+  }
+
+  .yellow {
+    color: #F6BB42;
+  }
 }
 
 .typeahead {
   .dropdown-menu {
     width: 100%;
-  }
-
-  .active {
-
   }
 }
 
