--- a/views/index.html
+++ b/views/index.html
@@ -107,6 +107,18 @@
               <div class="chart" google-chart chart="chartObject" style="{{cssStyle}}"></div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="result-item">
+                <i class="fa fa-flash fa-2x yellow"></i><br><strong>1234 kwh</strong></i>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="result-item">
+                <i class="fa fa-leaf green fa-2x"></i><br><strong>0.7kg CO2 / year</strong>
+              </div>
+            </div>
+          </div>
         </form>
       </div>
     </div>
