--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
             </div>
             <div class="col-xs-6">
               <div class="result-item">
-                <i class="fa fa-leaf green fa-2x"></i><br><strong>0.7kg CO2 / year</strong>
+                <i class="fa fa-leaf green fa-2x"></i><br><strong>{{CO2Savings | number : 2}}kg CO2 / year</strong>
               </div>
             </div>
           </div>
