--- a/views/index.html
+++ b/views/index.html
@@ -84,6 +84,11 @@
 
             </div>
           </div>
+          <div class="row" ng-if="errorMessage != ''">
+              <div class="col-xs-12">
+                  {{errorMessage}}
+              </div>
+          </div>
           <div class="row">
             <div class="col-xs-3">
               <div class="result-item">
