--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,6 @@
 
   </head>
   <body ng-app="solarcap-app">
-
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -156,12 +155,12 @@
           <div class="row">
             <div class="col-xs-6">
               <div class="result-item">
-                <i class="fa fa-flash fa-2x yellow"></i><br><strong>1234 kwh</strong></i>
+                <i class="fa fa-flash fa-2x yellow"></i><br><strong>{{KWHPerYear | number: 0 }} kwh</strong></i>
               </div>
             </div>
             <div class="col-xs-6">
               <div class="result-item">
-                <i class="fa fa-leaf green fa-2x"></i><br><strong>{{CO2Savings | number : 2}}kg CO2 / year</strong>
+                <i class="fa fa-leaf green fa-2x"></i><br><strong>{{CO2Savings | number : 0}} kg CO2 / year</strong>
               </div>
             </div>
           </div>
