added more styling to navbar

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -89,7 +89,7 @@ body {
 
 .result-item {
   padding: 5px;
-  margin-bottom: 3px;
+  margin-bottom: 10px;
   background-color: #fff;
   border: 1px solid #d9d9d9;
   -webkit-border-radius: @borderRadius;
@@ -152,6 +152,10 @@ body {
 .navbar {
   margin-bottom: 0;
   min-height: 30px;
+  border-radius: 0;
+  -webkit-box-shadow: 0 7px 0 rgba(0,0,0,.1);
+  -moz-box-shadow: 0 7px 0 rgba(0,0,0,.1);
+  box-shadow: 0 7px 0 rgba(0,0,0,.1);
 }
 
 .navbar-default {
