added reset button to navbar

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -158,6 +158,17 @@ body {
   box-shadow: 0 7px 0 rgba(0,0,0,.1);
 }
 
+.navbar-brand {
+  color: #fff !important;
+  margin-left: 10px !important;
+  float: none;
+  padding: 0;
+  height: 30px;
+  line-height: 30px;
+}
+
+
+
 .navbar-default {
   margin-top: 0;
   background-color: @lightBlue;
