--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <!--<a class="navbar-brand" href="#">Brand</a>-->
+        <a class="navbar-brand" href="#" ng-click="resetMap"><i class="fa fa-refresh"></i></a>
       </div>
 
       <div class="collapse navbar-collapse" id="nav">
@@ -54,7 +54,6 @@
 <div class="container-fluid full-height"  ng-controller="CalcCtrl">
     <div class="row full-height">
       <div class="col-xs-12 col-sm-8 full-height">
-        <button ng-click="resetMap()">reset</button>
         <div class="full-height" id="mapContainer"></div>
       </div>
       <div class="col-xs-12 col-sm-4 panel-right full-height">
