--- a/views/index.html
+++ b/views/index.html
@@ -126,7 +126,7 @@
                 {{ subsidy | currency : ""}} EUR
               </div>
             </div>
-            <div class="col-sm-6"">
+            <div class="col-sm-6">
               <div class="result-item">
                 <strong>Acquisition Cost</strong><br>
                 {{ acquisitionCosts | currency: ""}} EUR
