--- a/views/index.html
+++ b/views/index.html
@@ -124,13 +124,13 @@
             <div class="col-sm-6">
               <div class="result-item">
                 <strong>Yearly Subsidy</strong><br>
-                {{ subsidy | currency : ""}} EUR
+                {{ subsidy | number: 0}} EUR
               </div>
             </div>
             <div class="col-sm-6">
               <div class="result-item">
                 <strong>Acquisition Cost</strong><br>
-                {{ acquisitionCosts | currency: ""}} EUR
+                {{ acquisitionCosts | number: 0 }} EUR
               </div>
             </div>
             <div class="col-sm-6">
@@ -142,7 +142,7 @@
             <div class="col-xs-6">
               <div class="result-item">
                 <strong>Yearly Energy Savings</strong><br>
-                {{yearlySavings | currency: ""}} EUR
+                {{yearlySavings | number: 0}} EUR
               </div>
             </div>
           </div>
