--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <link href="vendor/css/theme.css" rel="stylesheet">
     <link href="vendor/css/wtf-forms.css" rel="stylesheet">
     <link href="vendor/css/animate.css" rel="stylesheet">
+    <link href="vendor/css/flaticon.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -54,10 +55,10 @@
 
 <div class="container-fluid full-height"  >
     <div class="row full-height">
-      <div class="col-xs-12 col-sm-8 full-height">
+      <div class="col-xs-12 col-sm-7 full-height">
         <div class="full-height" id="mapContainer"></div>
       </div>
-      <div class="col-xs-12 col-sm-4 panel-right full-height">
+      <div class="col-xs-12 col-sm-5 panel-right full-height">
         <script type="text/ng-template" id="typeaheadTemplate.html">
           <a>
             <span bind-html-unsafe="match.label | typeaheadHighlight:query"></span>
@@ -79,7 +80,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-4">
               <label>Type:</label>
               <div class="btn-group btn-group-justified type-picker">
                 <div class="btn-group">
@@ -90,7 +91,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-5">
               <label>Residents:</label>
               <div class="rating-list">
                 <i class="fa fa-child fa-3x rating-item" ng-class="{'active': inputData.residents >= 1}" ng-click="setRatingValue(1)"></i>
@@ -100,16 +101,9 @@
                 <i class="fa fa-child fa-3x rating-item" ng-class="{'active': inputData.residents == 5}" ng-click="setRatingValue(5)"></i>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="controls-stacked">
-                <label class="control checkbox">
-                  <input type="checkbox" ng-model="inputData.withBattery">
-                  <span class="control-indicator"></span>
-                  &nbsp;&nbsp;Calculate with battery?
-                </label>
-              </div>
+            <div class="col-xs-3">
+              <label>Battery</label>
+              <button class="btn btn-white" ng-class="{'active': inputData.withBattery}" type="button" ng-click="inputData.withBattery = !inputData.withBattery"><i class="flaticon-battery106"></i><br>Use Battery</button>
             </div>
           </div>
           <div class="row" ng-if="errorMessage != ''">
@@ -120,20 +114,20 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="result-item">
-                <strong>Yearly Subsidy</strong><br>
-                {{ subsidy | number: 0}} EUR
+                <strong>{{ subsidy | number: 0}} EUR</strong><br>
+                Yearly Subsidy
               </div>
             </div>
             <div class="col-sm-4">
               <div class="result-item">
-                <strong>Acquisition Cost</strong><br>
-                {{ acquisitionCosts | number: 0 }} EUR
+                <strong>{{ acquisitionCosts | number: 0 }} EUR</strong><br>
+                Acquisition Cost
               </div>
             </div>
             <div class="col-sm-4">
               <div class="result-item">
-                <strong>Amortization in years</strong><br>
-                {{amortizationInYears}}
+                <strong>{{amortizationInYears}}</strong><br>
+                Amortization in years
               </div>
             </div>
           </div>
