added wallet icon

--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -213,3 +213,8 @@ body {
   -ms-animation: bounceOut 1s;
   animation: bounceOut 1s;
 }
+
+.center-block {
+  width: 100%;
+  text-align: center;
+}
