--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="col-xs-5">
               <label class="center-block">Residents</label>
-              <div class="rating-list center block">
+              <div class="rating-list center-block">
                 <i class="fa fa-female fa-3x rating-item" ng-class="{'active': inputData.residents >= 1}" ng-click="setRatingValue(1)"></i>
                 <i class="fa fa-male fa-3x rating-item" ng-class="{'active': inputData.residents >= 2}" ng-click="setRatingValue(2)"></i>
                 <i class="fa fa-child fa-3x rating-item" ng-class="{'active': inputData.residents >= 3}" ng-click="setRatingValue(3)"></i>
@@ -103,7 +103,9 @@
             </div>
             <div class="col-xs-3">
               <label class="center-block">Battery</label>
-              <button class="btn btn-white btn-block" ng-class="{'active': inputData.withBattery}" type="button" ng-click="inputData.withBattery = !inputData.withBattery"><i class="flaticon-battery106"></i><br>Use Battery</button>
+              <button class="btn btn-white btn-block" ng-class="{'active': inputData.withBattery}" type="button" ng-click="inputData.withBattery = !inputData.withBattery"  data-toggle="tooltip" data-placement="top" title="Use your produced energy 24h." tooltip>
+                <i class="flaticon-battery106"></i><br>Use Battery
+              </button>
             </div>
           </div>
           <div class="row" ng-if="errorMessage != ''">
@@ -115,7 +117,7 @@
           </div>
           <div class="row" ng-show="showResult">
             <div class="col-sm-4">
-              <div class="result-item">
+              <div class="result-item" data-toggle="tooltip" data-placement="top" title="Fixed yearly subsidy for the next 20 years (EEG)." tooltip>
                 <strong>{{ subsidy | number: 0}} EUR</strong><br>
                 Yearly Subsidy
               </div>
@@ -144,7 +146,7 @@
             </div>
             <div class="col-xs-6">
               <div class="result-item">
-                <i class="fa fa-flash fa-2x yellow pull-right"></i><strong>{{KWHPerYear | number: 0 }} kwh</strong></i>
+                <i class="fa fa-flash fa-2x yellow pull-right"></i><strong>{{KWHPerYear | number: 0 }} kWh</strong></i>
               </div>
             </div>
             <div class="col-xs-6">
