added more tooltips

--- a/views/index.html
+++ b/views/index.html
@@ -123,7 +123,7 @@
               </div>
             </div>
             <div class="col-sm-4">
-              <div class="result-item">
+              <div class="result-item" data-toggle="tooltip" data-placement="top" title="Total cost of the plant." tooltip>
                 <strong>{{ acquisitionCosts | number: 0 }} EUR</strong><br>
                 Acquisition Cost
               </div>
