added margin to wallet icon

--- a/views/index.html
+++ b/views/index.html
@@ -156,7 +156,7 @@
             </div>
             <div class="col-xs-12">
               <div class="result-item">
-                <img class="img-responsive pull-left" src="img/wallet.png" width="26"><strong>{{yearlyMoney | number: 0}} EUR</strong>
+                <img class="img-responsive pull-left" src="img/wallet.png" width="25" style="margin-bottom: 2px"><strong>{{yearlyMoney | number: 0}} EUR</strong>
               </div>
             </div>
           </div>
