--- a/views/index.html
+++ b/views/index.html
@@ -181,5 +181,15 @@
   <script src="js/map/location.js" type="text/javascript"></script>
   <script src="js/map/search.js" type="text/javascript"></script>
   <script src="js/map/textmarker.js" type="text/javascript"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-52000713-1', 'hackathon-solarcalc-env-yp6qn2gmet.elasticbeanstalk.com');
+    ga('set', 'anonymizeIp', true);
+
+  </script>
   </body>
 </html>
