--- a/views/index.html
+++ b/views/index.html
@@ -189,7 +189,7 @@
 
     ga('create', 'UA-52000713-1', 'hackathon-solarcalc-env-yp6qn2gmet.elasticbeanstalk.com');
     ga('set', 'anonymizeIp', true);
-
+    ga('send', 'pageview');
   </script>
   </body>
 </html>
